--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup & Login Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css_files/styles.css">
 </head>
 <body>
     <div class="container">
@@ -62,6 +62,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="/js_files/script.js"></script>
 </body>
 </html>
