--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup & Login Page</title>
-    <link rel="stylesheet" href="/css_files/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <div class="header">
-    <img src="engineer.png" alt="FIXIT Logo" class="header-icon">
+    <img src="/images/engineer.png" alt="FIXIT Logo" class="header-icon">
     <h1 class="header-title">FIXIT</h1>
 </div>
 
