index.html updated

--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -37,8 +37,8 @@
         <div class="login-container">
             <h2>Sign up</h2>
             <div class="login-buttons">
-                <button onclick="toggleLogin('user')">Sign up as a customer</button>
-                <button onclick="toggleLogin('admin')">Sign up as an Employee
+                <button >Sign up as a customer</button>
+                <button >Sign up as an Employee
                 </button>
             </div>
 
