--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -34,9 +34,7 @@
         <div class="login-container">
             <h2>Sign up</h2>
             <div class="login-buttons">
-                <button onclick="location.href='signUp.html'" >Sign up as a customer
-                    
-                </button>
+                <button >Sign up as a customer</button>
                 <button >Sign up as an Employee
                 </button>
             </div>
