--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -18,14 +18,17 @@
             <h2>Login</h2>
             <form id="signup-form" action="#" method="POST" onsubmit="return validateForm()">
                 <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" required placeholder="Enter Username">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required placeholder="Enter your email">
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required placeholder="Enter Password">
+                    <input type="password" id="password" name="password" required placeholder="Create a password">
                 </div>
-                
+                <div class="form-group">
+                    <label for="re-password">Re-enter Password</label>
+                    <input type="password" id="re-password" name="re-password" required placeholder="Re-enter your password">
+                </div>
                 
                 <button type="submit">Log in</button>
             </form>
