--- a/demo/src/main/resources/static/login.html
+++ b/demo/src/main/resources/static/login.html
@@ -34,7 +34,7 @@
         <div class="login-container">
             <h2>Sign up</h2>
             <div class="login-buttons">
-                <button onclick="location.href='signUp.html'" >Sign up as a customer
+                <button onclick="location.href='customer_registration.html'" >Sign up as a customer
                     
                 </button>
                 <button onclick="location.href='worker_registration.html'" >Sign up as an Employee
