--- a/demo/src/main/resources/static/worker_registration.html
+++ b/demo/src/main/resources/static/worker_registration.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <div class="header">
-        <img src="engineer.png" alt="FIXIT Logo" class="header-icon">
+        <img src="/images/engineer.png" alt="FIXIT Logo" class="header-icon">
         <h1 class="header-title">FIXIT</h1>
     </div>
     <meta charset="UTF-8">
